Create credit token and Calculate credit token clean up